--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <section class="image">
-        <!--- make it a background image instead -->
-        <img
-          src="https://images.unsplash.com/photo-1767523881986-f8b55d3c5880?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="huge christmas tree with lights and decorations"
-          width="300px"
-        />
+        <div>
+          <img
+            src="https://raw.githubusercontent.com/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"
+            alt="Odin Logo"
+            width="50px"
+          />
+          <h1 class="caesar-dressing-regular">Odin</h1>
+        </div>
       </section>
       <section>
         <p>
@@ -25,26 +35,42 @@
 
         <form action="/submit">
           <legend>Let's do this!</legend>
-          <label for="first">FIRST NAME:</label>
-          <input type="text" id="first" name="first" required />
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-          <label for="password">PASSWORD:</label>
-          <input type="password" id="password" name="password" required />
-          <label for="last">LAST NAME:</label>
-          <input type="text" id="last" name="last" required />
-          <label for="phone">PHONE NUMBER:</label>
-          <input type="tel" id="phone" name="phone" required />
-          <label for="conf-password">CONFIRM PASSWORD:</label>
-          <input
-            type="password"
-            id="conf-password"
-            name="conf-password"
-            required
-          />
 
-          <button type="submit">Create Account</button>
+          <div>
+            <div>
+              <label for="first">FIRST NAME</label>
+              <input type="text" id="first" name="first" required />
+              <label for="email">EMAIL</label>
+              <input type="email" id="email" name="email" required />
+              <label for="password">PASSWORD</label>
+              <input
+                type="password"
+                id="password"
+                name="password"
+                class="pass"
+                required
+              />
+            </div>
+
+            <div>
+              <label for="last">LAST NAME</label>
+              <input type="text" id="last" name="last" required />
+              <label for="phone">PHONE NUMBER</label>
+              <input type="tel" id="phone" name="phone" required />
+              <label for="conf-password">CONFIRM PASSWORD</label>
+              <input
+                type="password"
+                id="conf-password"
+                name="conf-password"
+                class="pass"
+                required
+              />
+            </div>
+          </div>
         </form>
+
+        <button type="submit">Create Account</button>
+        <p class="login">Already have an account? <a href="#">Log in</a></p>
       </section>
     </div>
   </body>
